--- a/index.html
+++ b/index.html
@@ -2,39 +2,49 @@
 <html lang="en">
   <head>
      <meta charset="UTF-8"> 
-    <link rel="stylesheet" href="http://openlayers.org/en/v3.1.1/css/ol.css" type="text/css">
+    <link rel="stylesheet" href="./ol/ol.css" type="text/css">
     <style>
       .map {
         height: 100%;
         width: 100%;
       }
     </style>
-    <script src="http://openlayers.org/en/v3.1.1/build/ol.js" type="text/javascript"></script>
+    <script src="./ol/ol.js" type="text/javascript"></script>
     <title>map-deny</title>
   </head>
   <body>
     <h2>map-deny</h2>
     <div id="map" class="map"></div>
     <script type="text/javascript">
-      var vector = new ol.layer.Vector({
+	  var deniedHostsLayer = new ol.layer.Vector({
         title: 'Denied Hosts',
         source: new ol.source.GeoJSON({
+          projection:'EPSG:4326',
           url: './data/sample.json'
         }),
         style: new ol.style.Style({
           image: new ol.style.Circle({
             radius: 3,
-            fill: new ol.style.Fill({color: 'white'})
+            fill: new ol.style.Fill({color: 'red'})
           })
         })
       });
+
       var map = new ol.Map({
         layers: [
           new ol.layer.Tile({
-            source: new ol.source.OSM(),
-            projection: "EPSG:4326"
+            source: new ol.source.TileWMS({
+            url: 'http://demo.boundlessgeo.com/geoserver/wms',
+            params: {'LAYERS': 'ne:NE1_HR_LC_SR_W_DR'}
+            })
           }),
-          vector
+          /*
+          new ol.layer.Tile({
+            source: new ol.source.OSM()
+            //projection: "EPSG:4326"
+          }),
+          */
+          deniedHostsLayer
         ],
         controls: ol.control.defaults({
           attributionOptions: ({
@@ -43,6 +53,7 @@
         }),
         target: 'map',
         view: new ol.View({
+          projection: 'EPSG:4326',
           center: [0, 0],
           zoom: 2
         })
